Improve old translations & lores

--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -1124,7 +1124,7 @@
 						"eng": "Improve Printing Rank"
 					},
 					"description": {
-						"trans": "您的打印等级决定了您打印物品的等级。 通过黑市来打印和销售图纸文件以获得打印经验",
+						"trans": "您的打印等级决定了您打印物品的等级。 通过黑市来打印和销售图纸缓存文件以获得打印经验",
 						"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
 					}
 				},
@@ -2022,11 +2022,11 @@
 		},
 		"noPrintableCaches": {
 			"title": {
-				"trans": "未找到装备图纸文件",
+				"trans": "未找到装备图纸缓存文件",
 				"eng": "Equipment Cache not found"
 			},
 			"subTitle": {
-				"trans": "从敌人和地下城中收集图纸文件以打印您的新装备。",
+				"trans": "从敌人和地下城中收集图纸缓存文件以打印您的新装备。",
 				"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
 			},
 			"description": {
@@ -2882,7 +2882,7 @@
 				"eng": "Reach printing rank 3"
 			},
 			"description": {
-				"trans": "使用图纸文件打印的物品等级将由您的打印等级决定， \r\n         升级您的打印等级，以便您可以打印更高的等级的物品。 \r\n        \r\n         您可以在[市中心]找到[3D分子打印机]，使用它来打印一些图纸文件来提升您的打印等级",
+				"trans": "使用图纸缓存文件打印的物品等级将由您的打印等级决定， \r\n         升级您的打印等级，以便您可以打印更高的等级的物品。 \r\n        \r\n         您可以在[市中心]找到[3D分子打印机]，使用它来打印一些图纸缓存文件来提升您的打印等级",
 				"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
 			}
 		},
@@ -3212,11 +3212,11 @@
 	},
 	"donationType": {
 		"donation1": {
-			"trans": "成员",
+			"trans": "会员",
 			"eng": "Member"
 		},
 		"donation2": {
-			"trans": "捐赠者",
+			"trans": "赞助者",
 			"eng": "Donator"
 		},
 		"donation3": {
@@ -3280,7 +3280,7 @@
 		"donation2": {
 			"benefits": {
 				"1": {
-					"trans": "「捐赠者」捐赠头衔",
+					"trans": "「赞助者」捐赠头衔",
 					"eng": "\"Donator\" donation title"
 				},
 				"2": {
@@ -4440,14 +4440,14 @@
 				"vars": [
 					"levelName"
 				],
-				"trans": "个人内存碎片 [${levelName}]",
+				"trans": "内存碎片 [${levelName}]",
 				"eng": "Experience Shard [${levelName}]"
 			},
 			"description": {
 				"vars": [
 					"levelName"
 				],
-				"trans": "一个承载了某个他人的记忆与经验的碎片, 使用后您将会获得其中关于${levelName}的Exp(经验点)",
+				"trans": "一个承载了某人的记忆与经验的碎片, 使用后您将会获得${levelName}点经验值",
 				"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
 			}
 		},
@@ -4474,14 +4474,14 @@
 					"tierName",
 					"typeName"
 				],
-				"trans": "${tierName} ${typeName} 图纸文件",
+				"trans": "${tierName} ${typeName} 图纸缓存文件",
 				"eng": "${tierName} ${typeName} cache"
 			},
 			"description": {
 				"vars": [
 					"typeName"
 				],
-				"trans": "一个缓存有 ${typeName} 信息的分子打印机图纸文件, \r\n                    可以去市中心使用3D分子打印机来使用它打印一个${typeName}\r\n                    \r\n                    来自大佬的建议：合成装备的等级将取决于您打印等级的高低,\r\n                    所以最好先使用低等级的缓存体, 因为合成它们需要更少的比特币并且对提升您的打印等级有帮助",
+				"trans": "一个缓存有 ${typeName} 信息的分子打印机图纸缓存文件, \r\n                    可以去市中心使用3D分子打印机来使用它打印一个${typeName}\r\n                    \r\n                    来自大佬的建议：合成装备的等级将取决于您打印等级的高低,\r\n                    所以最好先使用低等级的缓存体, 因为合成它们需要更少的比特币并且对提升您的打印等级有帮助",
 				"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
 			}
 		}
@@ -4805,38 +4805,38 @@
 		"printer": {
 			"defaultLines": {
 				"trans": [
-					"只要您有对应的图纸文件，我可以打印出您想要的任何东西。",
-					"给我图纸文件，我就给你成品！",
-					"请告诉我，你带了一些史诗级的图纸文件。",
+					"只要您有对应的图纸缓存文件，我可以打印出您想要的任何东西。",
+					"给我图纸缓存文件，我就给你成品！",
+					"请告诉我，你带了一些史诗级的图纸缓存文件。",
 					"欢迎。我希望你是真的来消费的顾客...",
-					"如果你有图纸文件，我可以打印它们！",
+					"如果你有图纸缓存文件，我可以打印它们！",
 					"很高兴我们不再使用墨水打印，我可以穿我最好的衣服去工作",
 					"不知道为什么，我们从来不用我们的复制器来打印食物。",
 					"茶，格雷伯爵茶，热的。也许还有泡沫。😋",
-					"让我看看你的图纸文件。",
+					"让我看看你的图纸缓存文件。",
 					"生生不息，繁荣昌盛。🖖",
-					"每次看到顾客我都会很兴奋；也许他们有史诗级的图纸文件！",
+					"每次看到顾客我都会很兴奋；也许他们有史诗级的图纸缓存文件！",
 					"我有时会感到孤独。有一天我会买一个恋爱机器人或 Android 机器人来陪伴我。",
 					"电脑是优秀而高效的仆人，但我不希望在它们手下服务。",
 					"别担心，我们的墨水不会用完的。",
 					"有时我想知道外面的世界是什么样子的。当你成名时，你会回来告诉我吗？",
 					"继续打印吧，继续打印吧。",
 					"我被困在这里了，但你没有。用你的新装备为我赢得战争！",
-					"我拿你的图纸文件，你拿装备！",
+					"我拿你的图纸缓存文件，你拿装备！",
 					"你的新装备看起来不错！",
 					"我希望有人能帮我印一些腿！我很想看看这个房间外面有什么...",
 					"我可以打印枪枝，但我却不能给自己打印一双手臂来迎接你。多么讽刺...",
 					"如果你看中了新装备，那就多带点钱。我会让你梦想成真。",
 					"我一直在想是谁被打倒了，让你们都有这么多钱。",
 					"我只做俗气的双关语，因为没有人愿意给我印一些腿，这样我就能找到更好的事情做。",
-					"我只是个打印机，但我能做出的东西会帮助你们获得更多的图纸文件。",
+					"我只是个打印机，但我能做出的东西会帮助你们获得更多的图纸缓存文件。",
 					"我听说荒坂银行是一个储存藏品的好地方，如果你还没有能力打印它们的话。",
 					"我打印的装备越多，我的资料就越多。我每天都会在打印方面变得更好！",
 					"你能为我打印一杯咖啡吗？这些打印工作都很累人。",
 					"你选择哪一个：雷射还是喷墨？",
 					"你不会又是来打印色色的图片吧？",
 					"打印一只小黄鸭",
-					"请告诉我你带了一些白色史诗级的图纸文件。",
+					"请告诉我你带了一些白色史诗级的图纸缓存文件。",
 					"刚用完彩色墨水。希望你喜欢黑白打印！",
 					"为什么我还没有打印一份自己的照片？",
 					"对不起，伙伴，没有免费打印！",
@@ -4856,7 +4856,7 @@
 				"eng": "Molecular 3d Printer"
 			},
 			"tut": {
-				"trans": "您可以在这里使用图纸文件来打印新的装备",
+				"trans": "您可以在这里使用图纸缓存文件来打印新的装备",
 				"eng": "You can use your Cache to print new equipment here"
 			}
 		},
@@ -5356,7 +5356,7 @@
 					"eng": "Print equipment"
 				},
 				"description": {
-					"trans": "使用3D分子打印机来打印任何物品图纸文件",
+					"trans": "使用3D分子打印机来打印任何物品图纸缓存文件",
 					"eng": "use molecular print to print any item cache"
 				}
 			},
@@ -5550,7 +5550,7 @@
 			"eng": "Synaptic Acceleration (Rare)"
 		},
 		"expBonus": {
-			"trans": "额叶皮质增强",
+			"trans": "额叶皮层增强",
 			"eng": "Frontal Cortex Enhancement"
 		},
 		"btcBonus": {
@@ -5639,7 +5639,7 @@
 				"amount",
 				"levelName"
 			],
-			"trans": "您获得了${amount} ${levelName}经验点",
+			"trans": "您获得了${amount} ${levelName}经验值",
 			"eng": "You received ${amount} ${levelName} experience points"
 		},
 		"item": {
