--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -9,11 +9,11 @@
  	 	 	"eng": "Inventory"
  	 	},
  	 	"quest": {
- 	 	 	"trans": "Hladanie",
+ 	 	 	"trans": "Úlohy",
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chatovať",
+ 	 	 	"trans": "Chat",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -54,7 +54,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Upraviť motto gangou",
+ 	 	 	 	 	"trans": "Upraviť motto gangu",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
@@ -620,7 +620,7 @@
  	 	 	},
  	 	 	"openButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Tradícia komunity",
+ 	 	 	 	 	"trans": "Komunitná tradícia",
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
@@ -674,7 +674,7 @@
  	 	 	 	"eng": "Unequip"
  	 	 	},
  	 	 	"use": {
- 	 	 	 	"trans": "Využitie",
+ 	 	 	 	"trans": "Použiť",
  	 	 	 	"eng": "Use"
  	 	 	},
  	 	 	"unlock": {
@@ -701,7 +701,7 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Premeňte túto vyrovnávaciu pamäť na zbraň alebo položku vybavenia, ktorú môžete Spojené arabské emiráty.",
+ 	 	 	 	"trans": "Premeňte túto vyrovnávaciu pamäť na zbraň alebo vybavenie, ktorú môžete použiť.",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	},
  	 	 	"openContainer": {
@@ -762,13 +762,13 @@
  	 	},
  	 	"backToPreviusLoc": {
  	 	 	"longPressBackToCity": {
- 	 	 	 	"trans": "Dlhá tlač sa vráťte do mesta",
+ 	 	 	 	"trans": "Podržte a vráťte sa do mesta",
  	 	 	 	"eng": "Long press to go back to city"
  	 	 	}
  	 	},
  	 	"notificationCenter": {
  	 	 	"deleteTip": {
- 	 	 	 	"trans": "Dlhý stlačte odstránenie",
+ 	 	 	 	"trans": "Podržte pre odstránenie",
  	 	 	 	"eng": "Long press to delete"
  	 	 	}
  	 	},
@@ -798,12 +798,12 @@
  	 	 	 	"vars": [
  	 	 	 	 	"repairFee"
  	 	 	 	],
- 	 	 	 	"trans": "Opravte všetky položky za (${repairFee} bitcoin)",
+ 	 	 	 	"trans": "Opravte všetky položky za (${repairFee} bitcoiov)",
  	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"unlockContainerButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Odomknúť",
+ 	 	 	 	 	"trans": "Odomknúť kontajner",
  	 	 	 	 	"eng": "Unlock Container"
  	 	 	 	}
  	 	 	},
@@ -817,7 +817,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Tlač zariadení je založená na vašej tlačovej úrovni, zvýšite svoje tlačové hodnotenie, tlačou viac položiek",
+ 	 	 	 	 	 	"trans": "Tlač zariadení je založená na vašej tlačovej úrovni, zvýšite svoju tlačovu úroveň, tlačou viac položiek",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -868,7 +868,7 @@
  	 	 	 	"eng": "Street Cred"
  	 	 	},
  	 	 	"status": {
- 	 	 	 	"trans": "Postavenie",
+ 	 	 	 	"trans": "Status",
  	 	 	 	"eng": "Status"
  	 	 	},
  	 	 	"bio": {
@@ -922,7 +922,7 @@
  	 	 	 	 	"eng": "Player Actions"
  	 	 	 	},
  	 	 	 	"sendPrivateMsg": {
- 	 	 	 	 	"trans": "Pošlite súkromnú správu",
+ 	 	 	 	 	"trans": "Poslať súkromnú správu",
  	 	 	 	 	"eng": "Send private message"
  	 	 	 	},
  	 	 	 	"sendGift": {
@@ -930,7 +930,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"inviteToGang": {
- 	 	 	 	 	"trans": "Pozvite gang",
+ 	 	 	 	 	"trans": "Pozvať do gangu",
  	 	 	 	 	"eng": "Invite to Gang"
  	 	 	 	},
  	 	 	 	"addToFriend": {
@@ -938,15 +938,15 @@
  	 	 	 	 	"eng": "add to Friend List"
  	 	 	 	},
  	 	 	 	"removeFromFriend": {
- 	 	 	 	 	"trans": "Odstráňte zo zoznamu priateľov",
+ 	 	 	 	 	"trans": "Odstráňiť zo zoznamu priateľov",
  	 	 	 	 	"eng": "Remove from Friend List"
  	 	 	 	},
  	 	 	 	"giveStreetCred": {
- 	 	 	 	 	"trans": "Dajte na ulici",
+ 	 	 	 	 	"trans": "Dať Uličný Kredit",
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	},
  	 	 	 	"report": {
- 	 	 	 	 	"trans": "Hráč",
+ 	 	 	 	 	"trans": "Nahlásiť hráča",
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	}
  	 	 	},
@@ -999,7 +999,7 @@
  	 	},
  	 	"setBio": {
  	 	 	"title": {
- 	 	 	 	"trans": "Zadajte svoje životopis",
+ 	 	 	 	"trans": "Zadajte svoj životopis",
  	 	 	 	"eng": "Enter your bio"
  	 	 	}
  	 	},
@@ -1023,7 +1023,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Strávte bitcoiny na zvýšenie toho, koľko položiek môžete vložiť do stánku súčasne",
+ 	 	 	 	"trans": " Utrácajte bitcoiny, aby ste zvýšili počet položiek, ktoré môžete súčasne vložiť do svojho stánku",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -1032,31 +1032,31 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Vyrovnanie",
+ 	 	 	 	 	"trans": "Uroneň",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
  	 	 	"tierSelection": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zriedkavosť",
+ 	 	 	 	 	"trans": "Vzácnosť",
  	 	 	 	 	"eng": "Rarity"
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "there are currently no items for sale in this category",
+ 	 	 	 	"trans": "v tejto kategórii momentálne nie sú žiadne položky na predaj",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
- 	 	 	 	"trans": "Nákup",
+ 	 	 	 	"trans": "Kúpiť",
  	 	 	 	"eng": "Purchase"
  	 	 	},
  	 	 	"remove": {
- 	 	 	 	"trans": "Presťahovať",
+ 	 	 	 	"trans": "Odobrať",
  	 	 	 	"eng": "Remove"
  	 	 	},
  	 	 	"stall": {
  	 	 	 	"sellItemButton": {
- 	 	 	 	 	"trans": "Dajte položku na predaj",
+ 	 	 	 	 	"trans": "Dať položku na predaj",
  	 	 	 	 	"eng": "Put Item On Sale"
  	 	 	 	},
  	 	 	 	"selectItemForSale": {
@@ -1083,7 +1083,7 @@
  	 	 	 	"eng": "Manual Refresh"
  	 	 	},
  	 	 	"abort": {
- 	 	 	 	"trans": "Potratiť",
+ 	 	 	 	"trans": "Prerušiť",
  	 	 	 	"eng": "Abort"
  	 	 	},
  	 	 	"marketShortcut": {
@@ -1099,11 +1099,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"abortWarningTitle": {
- 	 	 	 	"trans": "Si si istý, že chceš potratiť?",
+ 	 	 	 	"trans": "Si si istý, že chceš prerušiť?",
  	 	 	 	"eng": "Are you sure you want to abort?"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "Tým, že ste to prerušili",
+ 	 	 	 	"trans": "Tým, že ste to prerušili neobdržíš žiadnu odmenu ani material, nedá sa vráťiť",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
@@ -1113,7 +1113,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"gangName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Obsadené ${gangName}",
+ 	 	 	 	 	"trans": "Obsadené gangom ${gangName}",
  	 	 	 	 	"eng": "Occupied by ${gangName}"
  	 	 	 	},
  	 	 	 	"occupationPoints": {
@@ -1133,11 +1133,11 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Zlepšiť hodnosť tlače",
+ 	 	 	 	 	 	"trans": "Zlepšiť úroneň tlače",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Poradie tlač určuje úroveň tlače položky. Získajte tlač exp tlačiť a predať na čiernom trhu",
+ 	 	 	 	 	 	"trans": "Úroneň tlače určuje úroveň tlačenej položky. Získajte exp tlačenim a predajpm na čiernom trhu",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
@@ -1147,7 +1147,7 @@
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Vaše súčasné vybavenie sa zdá byť zastarané pre vašu úroveň, skúste vytlačiť silnejšie, aby ste ich nahradili",
+ 	 	 	 	 	 	"trans": "Vaše súčasné vybavenie sa zdá byť zastarané pre vašu úroveň, skúste vytlačiť silnejšie, aby ste ho nahradili",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
@@ -1166,11 +1166,11 @@
  	 	 	 	},
  	 	 	 	"aiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Použite jadro AI",
+ 	 	 	 	 	 	"trans": "Použite AI jadro",
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Vyzerá to, že máte nejaké jadrá AI, používajte ich na vyrovnanie automatického vyrovnania v príslušnej úrovni.",
+ 	 	 	 	 	 	"trans": "Vyzerá to, že máte nejaké AI jadrá, používajte ich na vyrovnanie automatického vyrovnania v príslušnej úrovni.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1180,7 +1180,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations",
+ 	 	 	 	 	 	"trans": "AI core môžes získať: \n        - čistením rôznych lokácií\n        - Crafting with Hash Processors and Tech Scraps\n        - Lootidg from enemies in all locations",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
