New lore translantions

--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -349,6 +349,19 @@
 			}
 		},
 		"chatBanner": {
+			"chatExploit": {
+				"title": {
+					 "vars": [
+						  "vpnName"
+					 ],
+					 "trans": "聊天漏洞已被启用，所有发送的消息都会被更改。 使用${vpnName}可保护您的讯息不被篡改",
+					 "eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+				},
+				"activateVPN": {
+					 "trans": "激活代理",
+					 "eng": "Activate VPN"
+				}
+		   },
 			"refreshBuff": {
 				"title": {
 					"vars": [
@@ -811,7 +824,7 @@
 			},
 			"buyUnit": {
 				"title": {
-					"trans": "购买单元(Units)",
+					"trans": "购买单位(Units)",
 					"eng": "Buy Unit"
 				}
 			}
@@ -992,7 +1005,7 @@
 		},
 		"market": {
 			"lookAround": {
-				"trans": "逛一下市场",
+				"trans": "随便逛逛",
 				"eng": "Look around"
 			},
 			"myStall": {
@@ -1482,15 +1495,6 @@
 			"itemLocked": {
 				"trans": "此物品已锁定",
 				"eng": "This item is locked"
-			}
-		},
-		"afkStartPopup": {
-			"timeEstimate": {
-				"vars": [
-					"time"
-				],
-				"trans": "这将花费${time}",
-				"eng": "This will take ${time}"
 			}
 		},
 		"calibration": {
@@ -2136,7 +2140,7 @@
 				"eng": "rules"
 			},
 			"faq": {
-				"trans": "常问问题",
+				"trans": "常见问题",
 				"eng": "faq"
 			},
 			"referral": {
@@ -2827,7 +2831,7 @@
 			"eng": "There is no enough space in your inventory for ${item}"
 		},
 		"takeAll": {
-			"trans": "拿走所有",
+			"trans": "全部拿取",
 			"eng": "Take all"
 		},
 		"discard": {
@@ -3035,7 +3039,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3043,7 +3047,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元",
+				"trans": "收到${unit}单位",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3052,7 +3056,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			}
 		},
@@ -3061,7 +3065,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3069,7 +3073,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3078,7 +3082,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3086,7 +3090,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3095,7 +3099,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3103,7 +3107,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3112,7 +3116,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3120,7 +3124,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3129,7 +3133,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3137,7 +3141,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3146,7 +3150,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3154,7 +3158,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		},
@@ -3163,7 +3167,7 @@
 				"vars": [
 					"unit"
 				],
-				"trans": "${unit}单元",
+				"trans": "${unit}单位",
 				"eng": "${unit} Unit"
 			},
 			"description": {
@@ -3171,7 +3175,7 @@
 					"unit",
 					"bonus"
 				],
-				"trans": "收到${unit}单元（${bonus}奖金）",
+				"trans": "收到${unit}单位（${bonus}奖金）",
 				"eng": "Receive ${unit} Unit (${bonus} bonus)"
 			}
 		}
@@ -3189,11 +3193,11 @@
 		},
 		"paypal": {
 			"paypalBonusTitle": {
-				"trans": "以PayPal购买单元时将额外获赠10％！",
+				"trans": "以PayPal购买单位时将额外获赠10％！",
 				"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
 			},
 			"paypalBonus": {
-				"trans": "若您使用PayPal购买，则会额外获赠10%单元",
+				"trans": "若您使用PayPal购买，则会额外获赠10%单位",
 				"eng": "You will receive additional 10% more Units with paypal purchase"
 			}
 		},
@@ -4115,7 +4119,7 @@
 		},
 		"afkAcceleration": {
 			"name": {
-				"trans": "神经突触加速装置",
+				"trans": "神经突触加速器",
 				"eng": "Synaptic Acceleration Transmitter"
 			},
 			"description": {
@@ -4125,7 +4129,7 @@
 		},
 		"afkAcceleration2": {
 			"name": {
-				"trans": "高级神经突触加速装置",
+				"trans": "高级神经突触加速器",
 				"eng": "Rare Synaptic Acceleration Transmitter"
 			},
 			"description": {
@@ -4135,7 +4139,7 @@
 		},
 		"expMultiplier": {
 			"name": {
-				"trans": "额叶皮层优化装置",
+				"trans": "额叶皮质优化器",
 				"eng": "Frontal Cortex Optimization Transmitter"
 			},
 			"description": {
@@ -4145,7 +4149,7 @@
 		},
 		"btcMultiplier": {
 			"name": {
-				"trans": "交易漏洞发信装置",
+				"trans": "交易漏洞发信器",
 				"eng": "Transaction Exploit Transmitter"
 			},
 			"description": {
@@ -4402,7 +4406,7 @@
 		},
 		"timeSkipPersonal": {
 			"name": {
-				"trans": "个人突触加速器",
+				"trans": "个人神经突触加速器",
 				"eng": "Personal Synaptic Accelerator"
 			},
 			"description": {
@@ -4412,7 +4416,7 @@
 		},
 		"chatExploitProtect": {
 			"name": {
-				"trans": "网络隧道 VPN",
+				"trans": "网络隧道代理",
 				"eng": "CyberTunnel VPN"
 			},
 			"description": {
@@ -4479,6 +4483,21 @@
 				"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
 			}
 		},
+		"afkRewardBoost": {
+			"name": {
+				 "trans": "奖励加成碎片",
+				 "eng": "Reward Booster Shard"
+			},
+			"description": {
+				 "vars": [
+					  "rewardMult",
+					  "time",
+					  "costMult"
+				 ],
+				 "trans": "当碎片激活时，所有玩家都可以选择在Boost Mode™中启动某些AFK任务，从而获得${rewardMult} x 奖励，同时将成本和持续时间提高到${costMult} x。 \\ n *此项目仍在测试，并且有可能发生平衡性改动，请在购买后立即使用 *",
+				 "eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
+			}
+	   },
 		"experienceShard": {
 			"name": {
 				"vars": [
@@ -5131,7 +5150,7 @@
 					"你的手臂上装满了东西，怎么能打仗呢？",
 					"你知道，你不必把你的所有东西都装在你的口袋里。",
 					"这样吧，你把你的旧背包给我，我给你一个新背包。",
-					"你走路的样子让我觉得你负荷太重。",
+					"你走路的样子让我觉得你负担太重。",
 					"当你想保证背包的安全时，你可以来跟我说。"
 				],
 				"eng": [
@@ -5586,11 +5605,11 @@
 	},
 	"statusEffect": {
 		"synapticAccelerationSmall": {
-			"trans": "突触加速",
+			"trans": "神经突触加速",
 			"eng": "Synaptic Acceleration"
 		},
 		"synapticAccelerationRare": {
-			"trans": "突触加速（罕见）",
+			"trans": "神经突触加速（罕见）",
 			"eng": "Synaptic Acceleration (Rare)"
 		},
 		"expBonus": {
@@ -5621,6 +5640,10 @@
 			"trans": "校准安全纳米机器人",
 			"eng": "Calibration Safety Nano Bot"
 		},
+		"afkRewardBoost": {
+			"trans": "AFK奖励加成",
+			"eng": "AFK Reward Boost"
+	   },
 		"pirate": {
 			"trans": "聊天漏洞[海盗]",
 			"eng": "Chat Exploit [PIRATE]"
@@ -6054,8 +6077,7 @@
 			"noTrait": {
 				"vars": [
 					"tierPart",
-					"name",
-					""
+					"name"
 				],
 				"trans": "${tierPart} ${name}",
 				"eng": "${tierPart} ${name}"
@@ -6117,11 +6139,11 @@
 				"vars": [
 					"amount"
 				],
-				"trans": "这将从您的帐户中捐赠${amount}单元",
+				"trans": "这将从您的帐户中捐赠${amount}单位",
 				"eng": "This will donate ${amount} Unit from your account"
 			},
 			"notEnough": {
-				"trans": "您没有足够的单元来捐赠。",
+				"trans": "您没有足够的单位来捐赠。",
 				"eng": "You do not have enough Unit to donate."
 			}
 		},
@@ -6254,7 +6276,7 @@
 			},
 			"dontShowAgain": {
 				"title": {
-					"trans": "不要再提示此信息",
+					"trans": "不再提示此信息",
 					"eng": "Don't show this again"
 				}
 			},
@@ -6288,11 +6310,11 @@
 		},
 		"promotion": {
 			"title": {
-				"trans": "广播收到",
+				"trans": "收到广播通知",
 				"eng": "Broadcast Received"
 			},
 			"dontShowAgain": {
-				"trans": "不要再次显示这次广播",
+				"trans": "不要再显示此次广播",
 				"eng": "Don\\'t show this broadcast again"
 			}
 		},
@@ -6390,6 +6412,52 @@
 			}
 		}
 	},
+	"chatExploit": {
+		"loveWords": {
+			 "trans": [
+				  "爱你!",
+				  "你们最棒了",
+				  "You guys are the best",
+				  "love yall",
+				  "You are amazing",
+				  "we are best friend",
+				  "Love you all",
+				  "you are great",
+				  "you the best",
+				  "we are awesome",
+				  "you are awesome",
+				  "have a nice day",
+				  "miss you",
+				  "miss you guys",
+				  "KYAAAAAAAAA",
+				  "wish you have nice day",
+				  "I love you",
+				  "要抱抱",
+				  "你有多爱我？"
+			 ],
+			 "eng": [
+				  "Love you",
+				  "You guys are great",
+				  "You guys are the best",
+				  "love yall",
+				  "You are amazing",
+				  "we are best friend",
+				  "Love you all",
+				  "you are great",
+				  "you the best",
+				  "we are awesome",
+				  "you are awesome",
+				  "have a nice day",
+				  "miss you",
+				  "miss you guys",
+				  "KYAAAAAAAAA",
+				  "wish you have nice day",
+				  "I love you",
+				  "can we hug?",
+				  "how much you love me?"
+			 ]
+		}
+   },
 	"createClanModal": {
 		"gangNameInput": {
 			"title": {
@@ -6594,7 +6662,7 @@
 			"vars": [
 				"price"
 			],
-			"trans": "${price}单元",
+			"trans": "${price}单位",
 			"eng": "${price} Unit"
 		},
 		"unitPriceDiscountEndDate": {
@@ -6604,6 +6672,14 @@
 			"trans": "折扣会在${date}结束",
 			"eng": "Discount ends in ${date}"
 		},
+		"endDate": {
+			"vars": [
+				 "date",
+				 "relative"
+			],
+			"trans": "限量额外奖励提供至${date}（于${relative}结束）",
+			"eng": "Limited addition till ${date} (end in ${relative})"
+	   },
 		"permanentDescription": {
 			"trans": "此头衔永远不会过期。\\ 它将永远留在您的帐户上。",
 			"eng": "This title will never expire.\\nIt stays with your account forever."
@@ -6617,5 +6693,66 @@
 			"trans": "这是 ${tierName} 级别的示例聊天窗口",
 			"eng": "example chat frame of ${tierName} Tier"
 		}
-	}
+	},
+	"actionStartModal": {
+		"timeReductionButton": {
+			 "title": {
+				  "vars": [
+					   "itemName",
+					   "currentPercent"
+				  ],
+				  "trans": "减少时间（当前${currentPercent}％）",
+				  "eng": "Time Reduction (currently ${currentPercent}%)"
+			 },
+			 "description": {
+				  "vars": [
+					   "itemName"
+				  ],
+				  "trans": "将行动所需的时间减少40％，可堆叠到80％",
+				  "eng": "Reduce time needed for action by 40%, stackable upto 80%"
+			 },
+			 "activate": {
+				  "trans": "马上减少",
+				  "eng": "reduce now"
+			 }
+		},
+		"extendButton": {
+			 "activatedTitle": {
+				  "trans": "奖励加成（激活）",
+				  "eng": "Reward Boost (Activated)"
+			 },
+			 "notActivatedTitle": {
+				  "trans": "奖励加成",
+				  "eng": "Reward Boost"
+			 },
+			 "activatedDescription": {
+				  "vars": [
+					   "itemName"
+				  ],
+				  "trans": "加成已激活，您必须勾选下面的复选框以使用加成",
+				  "eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+			 },
+			 "notActivatedDescription": {
+				  "vars": [
+					   "itemName"
+				  ],
+				  "trans": "将物品和经验加倍！持续时间和成本将增至4倍",
+				  "eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+			 },
+			 "activate": {
+				  "trans": "现在激活加成",
+				  "eng": "Boost now"
+			 },
+			 "enableBoost": {
+				  "trans": "激活奖励加成",
+				  "eng": "Enable reward boost"
+			 }
+		},
+		"startButton": {
+			 "title": {
+				  "trans": "开始",
+				  "eng": "start"
+			 }
+		}
+   }
 }
