--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -6409,23 +6409,23 @@
  	 	 	"trans": [
  	 	 	 	"愛你!",
  	 	 	 	"你們最棒了",
- 	 	 	 	"You guys are the best",
- 	 	 	 	"love yall",
- 	 	 	 	"You are amazing",
- 	 	 	 	"we are best friend",
- 	 	 	 	"Love you all",
- 	 	 	 	"you are great",
- 	 	 	 	"you the best",
- 	 	 	 	"we are awesome",
- 	 	 	 	"you are awesome",
- 	 	 	 	"have a nice day",
- 	 	 	 	"miss you",
- 	 	 	 	"miss you guys",
+ 	 	 	 	"好喜歡你們",
+ 	 	 	 	"愛死你們了",
+ 	 	 	 	"你好棒",
+ 	 	 	 	"我們是最好的朋友",
+ 	 	 	 	"好愛你們",
+ 	 	 	 	"你好好喔",
+ 	 	 	 	"我愛你",
+ 	 	 	 	"我們最棒了",
+ 	 	 	 	"你們太神了",
+ 	 	 	 	"你對我很重要",
+ 	 	 	 	"我想你",
+ 	 	 	 	"我好想你們喔",
  	 	 	 	"KYAAAAAAAAA",
- 	 	 	 	"wish you have nice day",
- 	 	 	 	"I love you",
+ 	 	 	 	"祝你有個美好的一天",
+ 	 	 	 	"好愛你",
  	 	 	 	"要抱抱",
- 	 	 	 	"how much you love me?"
+ 	 	 	 	"你有多愛我"
  	 	 	],
  	 	 	"eng": [
  	 	 	 	"Love you",
