--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -116,7 +116,7 @@
  	 	},
  	 	"communityContentBox": {
  	 	 	"title": {
- 	 	 	 	"trans": "Obsah komunity",
+ 	 	 	 	"trans": "Komunitný obsah",
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
@@ -1180,7 +1180,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "AI core môžes získať: \n        - čistením rôznych lokácií\n        - Crafting with Hash Processors and Tech Scraps\n        - Lootidg from enemies in all locations",
+ 	 	 	 	 	 	"trans": "AI core môžes získať: \n        - čistením rôznych lokácií\n        - Vytváranie pomocou hash procesorov a technického bordelu\n        - Prehladávaním nepriateľov vo všetkých lokáciách ",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1198,17 +1198,17 @@
  	 	 	 	},
  	 	 	 	"infoBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Prebiehajúci kybernetický priestor",
+ 	 	 	 	 	 	"trans": "Prebiehajúci kybernetický útok",
  	 	 	 	 	 	"eng": "Cyberspace breach in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players a buff",
+ 	 	 	 	 	 	"trans": "Spojte sily s ostatnými Netrunnermi, aby ste prelomili SL-Data Fortress a udelili všetkým hráčom buff",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"completeBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Dokončená prevádzka porušenia",
+ 	 	 	 	 	 	"trans": "Operácia porušenia dokončená",
  	 	 	 	 	 	"eng": "Breach operation completed"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
@@ -1244,12 +1244,12 @@
  	 	 	 	"eng": "Suspended"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Your account has been suspended automatically by the system due to Suspicious Activity",
+ 	 	 	 	"trans": "Váš účet bol automaticky zablokovaný systémom z dôvodu Podozrivej Aktivity",
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"possibleReasons": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "To by mohlo byť spôsobené:",
+ 	 	 	 	 	"trans": "Toto mohlo byť spôsobené:",
  	 	 	 	 	"eng": "This could be caused by:"
  	 	 	 	},
  	 	 	 	"2": {
@@ -1270,7 +1270,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"content": {
- 	 	 	 	"trans": "Ak máte akékoľvek otázky, neváhajte a kontaktujte spoločnosť Dexter priamo prostredníctvom oficiálneho Discord (odkaz nájdete v plávajúcej ponuke -> odkazy) alebo e -mail na adresu ching.huang.dexter@gmail.com",
+ 	 	 	 	"trans": "Ak máte akékoľvek otázky, neváhajte a kontaktujte Dextera priamo prostredníctvom oficiálneho Discordu (odkaz nájdete v plávajúcej ponuke -> odkazy) alebo e -mail na adresu ching.huang.dexter@gmail.com",
  	 	 	 	"eng": "If you have any questions please feel free to contact Dexter directly via official Discord (Link can be found in Floating Menu -> Links) or email to ching.huang.dexter@gmail.com"
  	 	 	}
  	 	},
@@ -1308,7 +1308,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Recyklovať",
+ 	 	 	 	"trans": "Recyklovať položku",
  	 	 	 	"eng": "Recycle Item"
  	 	 	},
  	 	 	"selectAmount": {
@@ -1320,14 +1320,14 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"timeStr"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "To bude trvať ${timeStr}",
+ 	 	 	 	 	"trans": "Bude to trvať ${timeStr}",
  	 	 	 	 	"eng": "This will take ${timeStr}"
  	 	 	 	}
  	 	 	}
  	 	},
  	 	"setting": {
  	 	 	"langWarning": {
- 	 	 	 	"trans": "This language pack is open-source and contributed to by our players. The text may not be fully translated and may contain mistakes. Please feel free to edit and contribute from our Github page",
+ 	 	 	 	"trans": "Tento jazykový balíček je open source a prispela k nemu komunita. Text nemusí byť úplne preložený a môže obsahovať chyby. Neváhajte upravovať a prispievať z našej stránky Githubu",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"langGithub": {
@@ -1348,17 +1348,17 @@
  	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zakázať čiaru na časovanie útoku",
+ 	 	 	 	 	"trans": "Zakázať panel časovania útoku",
  	 	 	 	 	"eng": "Disable Attack Timing Bar"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Zakázať časovú lištu načasovania útoku neumožní ďalšie škody",
+ 	 	 	 	 	"trans": "Zakázať časový panel načasovania útoku, neumožní ďalšie škody",
  	 	 	 	 	"eng": "Disabling attack timing bar will not grant extra damage"
  	 	 	 	}
  	 	 	},
  	 	 	"blockGifts": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zakážte prijímanie darčekov",
+ 	 	 	 	 	"trans": "Zakázať prijímanie darčekov",
  	 	 	 	 	"eng": "Disable receiving gifts"
  	 	 	 	}
  	 	 	},
@@ -1370,7 +1370,7 @@
  	 	 	},
  	 	 	"disableSkipRespectNoti": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zakázať oznámenie o preskočení rešpektu",
+ 	 	 	 	 	"trans": "Zakázať upozornenie na preskočenie rešpektu",
  	 	 	 	 	"eng": "Disable Skip Respect Notification"
  	 	 	 	}
  	 	 	},
@@ -1380,20 +1380,20 @@
  	 	 	 	 	"eng": "Disable Chat Effect"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Zakázať, ak karta chat zaostáva počas preskočenia",
+ 	 	 	 	 	"trans": "Zakázať, ak karta chatu počas preskakovania zaostáva",
  	 	 	 	 	"eng": "Disable if chat tab lags during skips"
  	 	 	 	}
  	 	 	},
  	 	 	"receiveClanNotification": {
- 	 	 	 	"trans": "Dostať oznámenie gangov",
+ 	 	 	 	"trans": "Dostávať oznámenia od gangU",
  	 	 	 	"eng": "Receive Gang Notification"
  	 	 	},
  	 	 	"receiveGlobalNotification": {
- 	 	 	 	"trans": "Dostávať globálne upozornenie Buff",
+ 	 	 	 	"trans": "Dostávať globálne upozornenie",
  	 	 	 	"eng": "Receive Global Buff Notification"
  	 	 	},
  	 	 	"forceMobileMode": {
- 	 	 	 	"trans": "Povoľte režim Cyberpunk",
+ 	 	 	 	"trans": "Povoliť režim Cyberpunk",
  	 	 	 	"eng": "Enable Cyberpunk Mode"
  	 	 	},
  	 	 	"uiScale": {
@@ -1413,11 +1413,11 @@
  	 	 	 	"eng": "Danger Zone"
  	 	 	},
  	 	 	"restartRequired": {
- 	 	 	 	"trans": "The app will restart after saving",
+ 	 	 	 	"trans": "Apolikácia sa rešetuje po uložení",
  	 	 	 	"eng": "App will self restart after save"
  	 	 	},
  	 	 	"save": {
- 	 	 	 	"trans": "zachrániť",
+ 	 	 	 	"trans": "uložiť",
  	 	 	 	"eng": "save"
  	 	 	}
  	 	},
@@ -1445,7 +1445,7 @@
  	 	},
  	 	"job": {
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "Ak chcete získať prístup k Hub Job Hub, musíte byť aspoň úrovňou 2",
+ 	 	 	 	"trans": "Ak chcete získať prístup k Job Hubu, musíte byť aspoň úrovňou 2",
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
@@ -1503,7 +1503,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Ste si istí, že chcete túto položku kalibrovať pomocou ${percent}% deštruktívnej zlyhania?",
+ 	 	 	 	 	"trans": "Ste si istí, že chcete túto položku kalibrovať, ${percent}% šanca na zlyhanie?",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
@@ -1521,7 +1521,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Priradenie hodnosti gangov vás bude stáť ${cost} btc a potrebuje reštart hry, aby ste videli zmenu",
+ 	 	 	 	 	"trans": "Pridelenie hodnosti gangu vás bude stáť ${cost} bitcoinoc a potrebuje reštart hry, aby ste videli zmenu",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
@@ -1562,7 +1562,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "Are you sure you want to kick this player from your gang?",
+ 	 	 	 	"trans": "Si si istý, že chceš vyhodiť tohto hráča z svojho gangu??",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -1602,13 +1602,13 @@
  	 	},
  	 	"captcha": {
  	 	 	"title": {
- 	 	 	 	"trans": "Enter the system passcode to proceed",
+ 	 	 	 	"trans": "Ak chcete pokračovať zadajte prístupový kód",
  	 	 	 	"eng": "Enter system passcode to proceed"
  	 	 	}
  	 	},
  	 	"dungeon": {
  	 	 	"public": {
- 	 	 	 	"trans": "Verejná žalák",
+ 	 	 	 	"trans": "Verejný dungeon",
  	 	 	 	"eng": "Public dungeon"
  	 	 	},
  	 	 	"password": {
@@ -1621,11 +1621,11 @@
  	 	 	},
  	 	 	"listButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Žalári",
+ 	 	 	 	 	"trans": "Gungeony",
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "In dungeons, you will not heal after each fight, and enemies are stronger, but there is more exp and loot",
+ 	 	 	 	 	"trans": "V dungeonoch sa nebudete liečiť po každom boji, nepriatelia sú silnejší, ale je tam viac expov a koristi",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -1640,10 +1640,10 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noHealingPrompt": {
- 	 	 	 	"trans": "Maybe buy some healing items first?",
+ 	 	 	 	"trans": "Možno si najprv kúpte nejaké liečivá?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Seems like you dont have any Pain Away with you. Purchase it from Trinoky Mart in the city first before entering dungeons since you will not regen after battles in dungeon",
+ 	 	 	 	 	"trans": "Zdá sa, že so sebou nemáte žiadny Pain. Pred vstupom do dungeonu si ho kúpte v Trinoky Marte v meste, pretože po bitkách v dungeone sa nevyliečite.",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
